Move portfolio image to other page

--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,7 @@
 			<!-- Add content here -->
             <div id="madbyit-site" class="madbyit-site-common">
                 <h1>Contact</h1>
-				<div id="hq">
-					<img src="images/madbyit.png">
+				<div id="mb">
 					<p>Madilyn Bystedt
 
 						Lorum ipsum</p>
