--- a/whoami.html
+++ b/whoami.html
@@ -31,9 +31,12 @@
 			<!-- Add content here -->
             <div id="whoami" class="madbyit-site-common">
                 <h1>Who am I</h1>
-				<p>
-					Lorum ipsum...
-				</p>
+				<div id="whoiam">
+					<img src="images/madbyit.png">
+					<p>Madilyn Bystedt
+						Lorum ipsum
+					</p>
+				</div>
                 <br><!-- This is here due to footer otherwise is covering text at bottom --><br>
             </div>
         </div>
