--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="column middle">
 			<!-- Add content here -->
 				<h1>Madilyn Bystedt</h1>
-				
+				<h1 style="color: red;">[ ! Online Resume - Work In Progress...]</h1>
 				<!-- Slideshow container -->
 				<div class="slideshow-container">
 
