--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css"/>
-    <script src="js/main.js"></script>
-	<title>Contact</title>
-	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-</head>
-<body onload="getcurrentyear();">
-	<header>
-		<a href="index.html">Madilyn Bystedt</a>
-	</header>
-	<div>
-		<!--Navigation bar-->
-		<div id="nav-content"></div>
-		<script>
-			$(function(){
-				$("#nav-content").load("nav.html");
-			});
-		</script>
-		<!--end of Navigation bar-->
-		
-		<div class="row">
-			<div class="column side">
-			<!-- Empty placeholder -->
-			</div>
-			<div class="column middle">
-			<!-- Add content here -->
-            <div id="madbyit-site" class="madbyit-site-common">
-                <h1>Contact</h1>
-				<div id="mb">
-					<p>Madilyn Bystedt
-
-						Lorum ipsum</p>
-				</div>
-                <br><!-- This is here due to footer otherwise is covering text at bottom --><br>
-            </div>
-        </div>
-			<div class="column side">
-			<!-- Empty placeholder -->
-			</div>
-		</div>
+<!-- Add content here -->
+<div id="contact-site" class="madbyit-site-common">
+	<h1>Contact</h1>
+	<div id="mb">
+		<p>Madilyn Bystedt
+			Lorum ipsum</p>
 	</div>
-	<footer>
-		<p>&copy;</p>
-		<p id="year"></p> 
-		<p>Madilyn Bystedt @ madbyit</p>
-	</footer>
-</body>
-</html>
+	<br><!-- This is here due to footer otherwise is covering text at bottom --><br>
+</div>
