--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css"/>
 	<link rel="stylesheet" href="css/home.css"/>
+	
     <script src="js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<title>MadByIT</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
-<body onload="getcurrentyear(); cookieBanner();">
+<body onload="getCurrentYear(); cookieBanner();">
 	<header>
 		<a href="#home" onclick="currentSlide(1);">MadByIT - Software developer</a>
 	</header>
