--- a/home.html
+++ b/home.html
@@ -1,6 +1,5 @@
 <!-- Add content here -->
 <h1>Madilyn Bystedt</h1>
-<h1 style="color: red;">[ ! Online Resume - Work In Progress...]</h1>
 <!-- Slideshow container -->
 <div class="slideshow-container">
 
@@ -22,10 +21,6 @@
 		<img src="images/madbyit_fullstack.png">
 		<div class="text">Fullstack</div>
 	</div>
-
-	<!-- Next and previous buttons -->
-	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-	<a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 <!-- The dots/circles -->
@@ -36,5 +31,29 @@
 </div>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-
+<br><!-- This is here due to footer otherwise is covering text at bottom --><br>
 </div>
+
+<!-- Slideshow -->
+
+<script>
+	let slideIndex = 0;
+	showSlides();
+	
+	function showSlides() {
+	  let i;
+	  let slides = document.getElementsByClassName("madbyitSlides");
+	  let dots = document.getElementsByClassName("dot");
+	  for (i = 0; i < slides.length; i++) {
+		slides[i].style.display = "none";  
+	  }
+	  slideIndex++;
+	  if (slideIndex > slides.length) {slideIndex = 1}    
+	  for (i = 0; i < dots.length; i++) {
+		dots[i].className = dots[i].className.replace(" active", "");
+	  }
+	  slides[slideIndex-1].style.display = "block";  
+	  dots[slideIndex-1].className += " active";
+	  setTimeout(showSlides, 3000); // Change image every 3 seconds
+	}
+</script>
