Add aitomatic slide show
Also add fix for enter page

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 	
     <script src="js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	<script>
+		$(document).ready(function() {
+		   $(location).attr('href','http://127.0.0.1:5500/index.html#home');
+		   
+		});
+	 </script>
 	<title>MadByIT</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body onload="getCurrentYear(); cookieBanner();">
 	<header>
-		<a href="#home" onclick="currentSlide(1);">MadByIT - Software developer</a>
+		<a href="#home">MadByIT - Software developer</a>
 	</header>
 	<div>
 		<!--Navigation bar-->
@@ -35,7 +41,7 @@
 				Navigation menu
 				-->
 				<ul id="navmenu">
-					<li onclick="currentSlide(1);"><a href="#home">Home</a></li>
+					<li><a href="#home">Home</a></li>
 					<li><a href="#aboutme">About me</a></li>
 					<li><a href="#techblog">Tech Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -53,7 +59,7 @@
 				<div id="home">
 					<script>
 					$(function(){
-			  			$("#home").load("home.html");
+						$("#home").load("home.html");
 					});
 					</script>
 				</div>
