--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 	
     <script src="js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-	<script>
-		$(document).ready(function() {
-		   $(location).attr('href','index.html#home');
-		});
-	 </script>
+	<script>window.location.href = "index.html#home"</script>
 	<title>MadByIT</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
